force-app/main/default/objects/clariti__ReceiptSettings__mdt/clariti__ReceiptSettings__mdt.object-meta.xml
<CustomObject>
    <description>Settings for document generation</description>
    <label>Document Settings</label>
    <pluralLabel>Document Settings</pluralLabel>
</CustomObject>