force-app/main/default/objects/clariti__ReceiptSettings__mdt/fields/clariti__FieldSetToDisplay__c.field-meta.xml
<CustomField>
    <fullName>clariti__FieldSetToDisplay__c</fullName>
    <description>Please specify the Field Set name that defines which Fields to display on the PDF</description>
    <inlineHelpText>Please specify the Field Set name that defines which Fields to display on the PDF</inlineHelpText>
    <label>Field Set to Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>