force-app/main/default/objects/clariti__ReceiptSettings__mdt/fields/clariti__FieldSetValueSeparator__c.field-meta.xml
<CustomField>
    <fullName>clariti__FieldSetValueSeparator__c</fullName>
    <description>Character to use to separate values within the field set, such as &quot; - &quot;</description>
    <inlineHelpText>Character to use to separate values within the field set, such as &quot; - &quot;</inlineHelpText>
    <label>Field Set Value Separator</label>
    <length>3</length>
    <type>Text</type>
</CustomField>