force-app/main/default/objects/clariti__ReceiptSettings__mdt/fields/clariti__LogoStaticResourceName__c.field-meta.xml
<CustomField>
    <fullName>clariti__LogoStaticResourceName__c</fullName>
    <description>Logo size should be: 100px W x 100px H with a .png extension</description>
    <label>Logo - Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>