force-app/main/default/objects/clariti__ReceiptSettings__mdt/fields/clariti__OfficeAddress__c.field-meta.xml
<CustomField>
    <fullName>clariti__OfficeAddress__c</fullName>
    <description>Address to be displayed on the document</description>
    <inlineHelpText>Address to be displayed on the document</inlineHelpText>
    <label>Office Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>