force-app/main/default/objects/clariti__ReceiptSettings__mdt/fields/clariti__OfficeEmail__c.field-meta.xml
<CustomField>
    <fullName>clariti__OfficeEmail__c</fullName>
    <description>Email to be displayed on the document</description>
    <inlineHelpText>Email to be displayed on the document</inlineHelpText>
    <label>Office Email</label>
    <type>Email</type>
</CustomField>