force-app/main/default/objects/clariti__ReceiptSettings__mdt/fields/clariti__OfficeFaxNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__OfficeFaxNumber__c</fullName>
    <description>Fax number to be displayed on the document</description>
    <inlineHelpText>Fax number to be displayed on the document</inlineHelpText>
    <label>Office Fax Number</label>
    <type>Phone</type>
</CustomField>