force-app/main/default/objects/clariti__ReceiptSettings__mdt/fields/clariti__OfficePhone__c.field-meta.xml
<CustomField>
    <fullName>clariti__OfficePhone__c</fullName>
    <description>Phone number to be displayed on the document</description>
    <inlineHelpText>Phone number to be displayed on the document</inlineHelpText>
    <label>Office Phone</label>
    <type>Phone</type>
</CustomField>