force-app/main/default/objects/clariti__ReceiptSettings__mdt/fields/clariti__OrgWideSenderEmailName__c.field-meta.xml
<CustomField>
    <fullName>clariti__OrgWideSenderEmailName__c</fullName>
    <description>Display name of the org wide email address to be used for the email</description>
    <inlineHelpText>Display name of the org wide email address to be used for the email</inlineHelpText>
    <label>Org Wide Sender Email Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>