force-app/main/default/objects/clariti__ReceiptSettings__mdt/fields/clariti__Website__c.field-meta.xml
<CustomField>
    <fullName>clariti__Website__c</fullName>
    <description>Website to be displayed on the document</description>
    <inlineHelpText>Website to be displayed on the document</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>